#global

#recursively proces subdir
SUBDIRS=

CURRENTPATH=$(shell /bin/pwd)

INCLUDES=
export INCLUDES


LDADD= /usr/local/lib/libxxx.a
LDFLAGS=
#DEFS+= -Dxxx
#LIBS=-lpthread

EXTRA_DIST= data1 data2

$(top_srcdir)
$(top_builddir)





#executable

bin_PROGRAMS=foo
#noinst_PROGRAMS=

foo_SOURCES=xxx.c
foo_LDADD=
foo_LDFLAGS=
foo_DEPENDENCIES=
include_HEADERS=foo.h
data_DATA=data1 data2

#static lib

lib_LIBRARIES=libfoo.a
#noinst_LIBRARIES=

foo_a_SOURCES=
foo_a_LDADD=
foo_a_LIBADD=
foo_a_LDFLAGS=
include_HEADERS=foo.h
data_DATA=data1 data2

